# ai_vision_defect

./: CMakeLists.txt  LICENSE  README.md
include/: DefectOverlay.h  FramePool.h  ImagePipeline.h  ImageRenderer.h  InferenceEngine.h  MainWindow.h  StatisticsPanel.h  Types.h  YoloDetector.h
src/: DefectOverlay.cpp  FramePool.cpp  ImagePipeline.cpp  ImageRenderer.cpp  InferenceEngine.cpp  MainWindow.cpp  StatisticsPanel.cpp  YoloDetector.cpp  main.cpp
tests/: test_pool_pipeline.cpp
